WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179666
REGRESSION (Safari 11): Buttons inside a fieldset legend cannot be clicked on in Safari 11
https://bugs.webkit.org/show_bug.cgi?id=179666
Summary
REGRESSION (Safari 11): Buttons inside a fieldset legend cannot be clicked on...
Dhaya
Reported
2017-11-14 05:59:02 PST
In Safari 11 (macOS + iOS) and Safari TP Release 43, buttons and form inputs cannot be clicked on when located inside a fieldset legend, if the fieldset has the overflow style property set to hidden. This issue doesn't occur in Safari 10, and other browsers. Here is a minimal reproducible example:
http://output.jsbin.com/yixeboj/2
.
Attachments
Fieldset box model
(23.07 KB, image/png)
2017-11-21 15:17 PST
,
Dragan
no flags
Details
patch
(5.92 KB, patch)
2018-01-21 03:07 PST
,
Antti Koivisto
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews124 for ios-simulator-wk2
(2.12 MB, application/zip)
2018-01-21 06:37 PST
,
EWS Watchlist
no flags
Details
patch
(6.57 KB, patch)
2018-01-21 10:14 PST
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
patch
(6.52 KB, patch)
2018-01-22 09:43 PST
,
Antti Koivisto
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-11-14 10:04:35 PST
<
rdar://problem/35534292
>
Dragan
Comment 2
2017-11-21 15:17:59 PST
Created
attachment 327433
[details]
Fieldset box model Legend is inside strange part of fieldset box-model.
Antti Koivisto
Comment 3
2018-01-21 03:07:02 PST
Created
attachment 331865
[details]
patch
EWS Watchlist
Comment 4
2018-01-21 06:37:03 PST
Comment on
attachment 331865
[details]
patch
Attachment 331865
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/6158154
New failing tests: fast/forms/legend-overflow-hidden-hit-test.html
EWS Watchlist
Comment 5
2018-01-21 06:37:05 PST
Created
attachment 331868
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Antti Koivisto
Comment 6
2018-01-21 10:14:57 PST
Created
attachment 331873
[details]
patch
alan
Comment 7
2018-01-22 08:50:33 PST
Comment on
attachment 331873
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=331873&action=review
> Source/WebCore/rendering/RenderBlock.h:239 > + bool hitTestExcludedChildrenInBorder(const HitTestRequest&, HitTestResult&, const HitTestLocation& locationInContainer, const LayoutPoint& accumulatedOffset, HitTestAction);
private pls
Antti Koivisto
Comment 8
2018-01-22 09:43:10 PST
Created
attachment 331937
[details]
patch
WebKit Commit Bot
Comment 9
2018-01-22 09:58:47 PST
Comment on
attachment 331937
[details]
patch Rejecting
attachment 331937
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 331937, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
http://webkit-queues.webkit.org/results/6170904
WebKit Commit Bot
Comment 10
2018-01-22 10:51:14 PST
Comment on
attachment 331937
[details]
patch Rejecting
attachment 331937
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 331937, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
http://webkit-queues.webkit.org/results/6171564
WebKit Commit Bot
Comment 11
2018-01-22 12:01:37 PST
Comment on
attachment 331937
[details]
patch Rejecting
attachment 331937
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 331937, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
http://webkit-queues.webkit.org/results/6172172
Antti Koivisto
Comment 12
2018-01-22 12:08:08 PST
https://trac.webkit.org/r227346
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug