REGRESSION (Safari 11): Buttons inside a fieldset legend cannot be clicked on in Safari 11 https://bugs.webkit.org/show_bug.cgi?id=179666 <rdar://problem/35534292>

Reviewed by Zalan Bujtas.

Source/WebCore:

The legend element of a fieldset is in the border area, outside the clip rect.
With overflow:hidden mouse events won't reach it.

Test case by Dhaya Benmessaoud.

Test: fast/forms/legend-overflow-hidden-hit-test.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint):
(WebCore::RenderBlock::hitTestExcludedChildrenInBorder):

Add a special case to hit testing to handle legend, similarly to what is done for painting.

* rendering/RenderBlock.h:

LayoutTests:

* fast/forms/legend-overflow-hidden-hit-test-expected.txt: Added.
* fast/forms/legend-overflow-hidden-hit-test.html: Added.
* platform/ios/TestExpectations:



Canonical link: https://commits.webkit.org/197774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227346 268f45cc-cd09-0410-ab3c-d52691b4dbfc